# caci

./: Cargo.toml  README.md  caci.toml  rustfmt.toml
.caci/scripts/: format  test
caci_cli/: Cargo.toml
caci_cli/src/: cli.rs  main.rs
caci_core/: Cargo.toml
caci_core/src/: error.rs  lib.rs  model.rs
caci_fs/: Cargo.toml
caci_fs/src/: config.rs  git.rs  lib.rs  native.rs  nop.rs
src/: cli.rs  main.rs
src/agent/: git.rs  mod.rs  native.rs
