[package]
name = "caci"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"
clap = { version = "4.5.15", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.207", features = ["derive"] }
toml_edit = { version = "0.22.20", features = ["serde"] }