[package]
name = "caci_fs"
version = "0.0.0"
edition = "2021"

[dependencies]
caci_core = { version = "0.0.0", path = "../caci_core" }
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.207", features = ["derive"] }
toml_edit = { version = "0.22.20", features = ["serde"] }
